[gd_scene load_steps=3 format=3 uid="uid://bs035oor8cgug"]

[ext_resource type="Script" path="res://scenes/settings_window.gd" id="1_36pg8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2lxl"]
bg_color = Color(0.2484, 0.2484, 0.2484, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Settings" type="Panel"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -128.0
offset_right = 109.5
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e2lxl")
script = ExtResource("1_36pg8")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_top = 6.0
offset_right = 31.0
offset_bottom = 29.0
grow_horizontal = 2
text = "Settings"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_top = 30.0
offset_right = 107.0
offset_bottom = 34.0
grow_horizontal = 2

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 37.5
offset_right = 214.0
offset_bottom = 63.5
theme_override_font_sizes/font_size = 13
selected = 2
item_count = 4
popup/item_0/text = "1920x1080"
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "1152x648"
popup/item_2/id = 2
popup/item_3/text = "640x360"
popup/item_3/id = 3

[node name="Label" type="Label" parent="OptionButton"]
layout_mode = 0
offset_left = -109.0
offset_top = 2.0
offset_right = -26.0
offset_bottom = 25.0
text = "Resolution"

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 72.5
offset_right = 216.0
offset_bottom = 96.5

[node name="Label" type="Label" parent="CheckBox"]
layout_mode = 0
offset_left = -186.0
offset_top = -1.0
offset_right = -103.0
offset_bottom = 22.0
text = "Fullscreen"

[node name="CheckBox2" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 103.5
offset_right = 216.0
offset_bottom = 127.5

[node name="Label" type="Label" parent="CheckBox2"]
layout_mode = 0
offset_left = -186.0
offset_top = -1.0
offset_right = -103.0
offset_bottom = 22.0
text = "VSync"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 213.0
offset_right = 217.0
offset_bottom = 246.0
text = "Apply"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 194.0
offset_top = 2.5
offset_right = 219.0
offset_bottom = 30.5
theme_override_font_sizes/font_size = 14
text = "X"

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 91.0
offset_top = 133.5
offset_right = 212.0
offset_bottom = 149.5
max_value = 1.0
step = 0.05
value = 1.0

[node name="Label" type="Label" parent="HSlider"]
layout_mode = 0
offset_left = -85.0
offset_top = -3.0
offset_right = -2.0
offset_bottom = 20.0
text = "Volume"

[connection signal="pressed" from="Button" to="." method="_on_apply_settings"]
[connection signal="pressed" from="Button2" to="." method="_on_close"]
